# forethought.chat

./: .env.example  .gitignore  Noah's notes.md  README.md  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  report.html  report.md  tsconfig.json  vercel.json
agent/: package.json  tsconfig.json
agent/src/: anthropic.ts  index.ts  iterate.ts  prompt.ts  search.ts  types.ts
app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
app/browse/: BrowseFilter.tsx  page.tsx
bench/: .gitignore  ITEMS_LICENSE  LICENSE  README.md  dashboard.html  report.html  report.md
bench/forethought_bench/: _common.py  _versions.py  runner.py  schema.py
bench/iteration/: 01-current-state.md  02-failure-modes.md  03-improvement-proposals.md  04-literature-synthesis.md  05-post-rationalization-probe.md  06-validation-protocol.md  07-landed-2026-05-03.md  08-validation-results-2026-05-03.md  09-variance-confirmation-2026-05-05.md  10-judge-ensembling-2026-05-05.md  11-agent-retrieval-diagnostic-2026-05-05.md  a1_spotcheck.csv
bench/observable/: observablehq.config.js  package.json
components/: Chat.tsx  Header.tsx  Message.tsx  PassageCard.tsx  Sources.tsx  icons.tsx
forethought_bench/: __init__.py  _versions.py  schema.py
lib/: anthropic.ts  article-link.ts  prompt.ts  search.ts  types.ts
scripts/: index.ts  render_report.py  run_all_tracks.sh  scrape.ts  verify_items.py
tests/: test_smoke.py
web/: .env.example  README.md  next.config.ts  package.json  pnpm-lock.yaml  tsconfig.json  vercel.json
(+359 files in other folders)
