[project]
name = "forethought-bench"
version = "0.1.0"
description = "Benchmark for agents answering macrostrategy questions grounded in Forethought Research's corpus."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "forethought-bench contributors" }]
dependencies = [
    "inspect-ai>=0.3.50",
    "anthropic>=0.40.0",
    "pydantic>=2.5.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "rapidfuzz>=3.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
]
# pgvector backend for hybrid retrieval; not required for Track 2.
pgvector = [
    "psycopg[binary]>=3.1",
    "pgvector>=0.2",
]
# Additional judge providers for multi-judge ensembles.
judges-openai = ["openai>=1.40.0"]

[project.scripts]
forethought-bench = "forethought_bench.runner:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["forethought_bench"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
